# experimental-OpenGl

./: .clang-format  CMakeLists.txt  README.md
res/shaders/: basic.shader  fragment.shader  vertex.shader
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  shader.cpp  shader.h  texture.cpp  texture.h  textures.cpp  textures.h
src/tests/: testClearColor.cpp  testClearColor.h  tests.cpp  tests.h
src/vender/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_common.hpp  matrix_common.inl  matrix_double2x2.hpp  matrix_double2x3.hpp  matrix_double2x4.hpp  matrix_double3x2.hpp  matrix_double3x3.hpp  matrix_double3x4.hpp  matrix_double4x2.hpp  matrix_double4x3.hpp  matrix_double4x4.hpp  matrix_float2x2.hpp  matrix_float2x3.hpp  matrix_float2x4.hpp  matrix_float3x2.hpp  matrix_float3x3.hpp  matrix_float3x4.hpp  matrix_float4x2.hpp  matrix_float4x3.hpp  matrix_float4x4.hpp  matrix_int2x2.hpp  matrix_int2x3.hpp  matrix_int2x4.hpp  matrix_int3x2.hpp  matrix_int3x3.hpp  matrix_int3x4.hpp  matrix_int4x2.hpp  matrix_int4x3.hpp  matrix_int4x4.hpp  matrix_projection.hpp  matrix_projection.inl  matrix_relational.hpp  matrix_relational.inl  matrix_transform.hpp  matrix_transform.inl  matrix_uint2x2.hpp  matrix_uint2x3.hpp  matrix_uint2x4.hpp  (+57 more)
